Hecha primera plantilla Javier

--- a/index.html
+++ b/index.html
@@ -7,19 +7,25 @@
 </head>
 <body>
 <div id="container">
-  <div id="body_image">&nbsp;</div>
+  
   <div id="page_header">
     <h1><span>Game Zone</span></h1>
     <h3><span>Welcome to Game Zone</span></h3>
     <div class="clearthis">&nbsp;</div>
   </div>
-  <div id="page_menu">
-    <ul>
-      <li class="online"><a href="#"><span>Online</span></a><span></span></li>
-      <li class="downloads"><a href="#"><span>Downloads</span></a><span></span></li>
-      <li class="community"><a href="#"><span>Community</span></a><span></span></li>
-      <li class="about"><a href="#"><span>About Zone</span></a><span></span></li>
-    </ul>
+  <div align="center">
+    <div class="boton">
+      <a href="" class="letraMenu">1980-1990</a>
+    </div>
+    <div class="boton">
+      <a href="" class="letraMenu">1990-2000</a>
+    </div>
+    <div class="boton">
+      <a href="" class="letraMenu">2000-2010</a>
+    </div>
+    <div class="boton">
+      <a href="index.html" class="letraMenu">2010-2020</a>
+      </div>
   </div>
   <div id="page_forms">
     <div id="userlogin">
@@ -53,11 +59,14 @@
       </form>
     </div>
   </div>
+  <div>
+    <img src="images/banner-videojuegos.jpg" class="imagen-banner" align="right">
+  </div>
   <div id="content_body">
     <div id="reviews_box">
       <div id="reviews">
         <div class="content_header">
-          <h2><span>Recent Reviews</span></h2>
+          <h2><span>Noticias </span></h2>
         </div>
         <div class="content_entry">
           <div class="thumbnail"><img src="images/_image01.gif" width="121" height="90" alt="Image Caption" /></div>
