--- a/plantilla.html
+++ b/plantilla.html
@@ -15,6 +15,9 @@
     <div class="clearthis">&nbsp;</div>
   </div>
   <div align="center">
+    <img src="banner-gameover.jpg" class="banner-gameover">
+  </div>
+  <div align="center">
     <div class="boton">
       <a href="" class="letraMenu">1980-1990</a>
     </div>
