10-20 y subpaginas hecho-Flavio Sabado

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a href="" class="letraMenu">2000-2010</a>
     </div>
     <div class="boton">
-      <a href="index.html" class="letraMenu">2010-2020</a>
+      <a href="10-20.html" class="letraMenu">2010-2020</a>
       </div>
   </div>
   <div id="page_forms">
