subiendo el top de juegos de los 80

--- a/superMarioBros.html
+++ b/superMarioBros.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1" />
-<title>Plantilla 2</title>
+<title>Super Mario Bros</title>
 <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 </head>
 <body>
@@ -19,24 +19,25 @@
   </div>
   <div align="left">
     <div class="boton">
-      <a href="" class="boton-plantilla2">Atrás</a>
+      <a href="80-90.html" class="boton-plantilla2">Atrás</a>
     </div>
     
   </div>
-  <div> <h1 class="titulo-top-plantilla2" align="left">Nombre Juego</h1></div>
+  <div> <h1 class="titulo-top-plantilla2" align="left">Super Mario Bros</h1></div>
   <div class="cuerpo" align="center">
     <table cellspacing="20">
       <tr align=>
-        <td><img src="images/_image01.gif" width="300px" height="240px"></img></td>
-        <td><img src="images/_image01.gif" width="300px" height="240px"></img></td>
+        <td><img src="images/supermariobros2.jpg" width="300px" height="240px"></img></td>
+        <td><img src="images/supermariobros3.jpg" width="300px" height="240px"></img></td>
       </tr>
       <tr>
-        <td><img src="images/_image01.gif" width="300px" height="240px"></img></td>
-        <td><img src="images/_image01.gif" width="300px" height="240px"></img></td>
+        <td><img src="images/supermariobros4.png" width="300px" height="240px"></img></td>
+        <td><img src="images/supermariobros5.jpg" width="300px" height="240px"></img></td>
       </tr>
     </table>
     
-     <p class="descripcionJuego">Descripcion del juegofdgfdsgfdgfsdgfsdgfdsgdsfgfdddddddddddddddddddd dddddd ddd ddddddd dddddddddddd ddddd ddddddddddd dddddddddd dddd dddddddddddd ddddddd dddddddd dddddd ddddddd ddddddd ddddddddd dddddddd ddddddd dddddd ddddddddddd ddddddddd ddddddd dddddddd ddddddddddddd dddddddd dddddd dddddddd ddddddddd ddddddddddd</p>
+     <p class="descripcionJuego">Fue producido por la compañía Nintendo, para la consola Nintendo Entertainment System(NES). El juego describe las aventuras de los hermanos Mario y Luigi. En esta ocasión ambos deben rescatar a la Princesa Peach que fue secuestrada por el rey de los Koopas, Bowser. A través de ocho diferentes mundos, los jugadores pueden controlar a alguno de los dos hermanos y deben enfrentarse finalmente tras los niveles correspondientes de cada mundo a los monstruos de cada castillo para rescatar a la Princesa Peach.<br>
+     Super Mario Bros, fue el juego que popularizó al personaje de Mario, convirtiéndolo en el icono principal de Nintendo, y uno de los personajes más reconocidos de los videojuegos, así como su hermano menor Luigi. Además, presentó por primera vez a la Princesa Peach, Toad, Bowser, entre otros personajes. Este juego es considerado el primer videojuego de plataformas de desplazamiento lateral de Nintendo y se ha convertido en un hito debido a la trascendencia de su diseño y papel en la industria de los videojuegos.</p>
   </div>
   
    
