corregido punto aparte-Flavio Domingo

--- a/zelda.html
+++ b/zelda.html
@@ -36,11 +36,11 @@
       </tr>
     </table>
     
-     <p class="descripcionJuego">La historia de  'The Legend of Zelda: Breath of the Wild' nos lleva nuevamente a las tierras de Hyrule, aunque, no como nos tenían acostumbrados los títulos más recientes, ya que, al igual que vimos en el título original, nos encontramos en un reunión que ha caído en la desdicha debido al ataque de Ganon, siendo así que todos los eventos ocurridos que nos han llevado a esta situación son un completo misterio.
+     <p class="descripcionJuego">La historia de  'The Legend of Zelda: Breath of the Wild' nos lleva nuevamente a las tierras de Hyrule, aunque, no como nos tenían acostumbrados los títulos más recientes, ya que, al igual que vimos en el título original, nos encontramos en un reunión que ha caído en la desdicha debido al ataque de Ganon, siendo así que todos los eventos ocurridos que nos han llevado a esta situación son un completo misterio. <br><br>
 
-Ante esta premisa, despertamos siendo Link, un joven que lleva durmiendo durante 100 años y que ha sido llamado por una extraña voz para salvar al reino de su situación actual y del mal que está por llegar. No obstante, este joven héroe desconoce por completo la situación, debiendo empezar desde cero para poder enfrentar al terrible Ganon, el cual se encuentra encerrado en el Castillo de Hyrule. Para cumplir esta tarea no sólo tendrá que hacerse fuerte, sino que tendrá que trabajar codo con codo con todos los habitantes de Hyrule, usando para ello la fantástica Piedra Sheikav, herramienta con la que despertamos para que nos ayude en esta tarea. 
+Ante esta premisa, despertamos siendo Link, un joven que lleva durmiendo durante 100 años y que ha sido llamado por una extraña voz para salvar al reino de su situación actual y del mal que está por llegar. No obstante, este joven héroe desconoce por completo la situación, debiendo empezar desde cero para poder enfrentar al terrible Ganon, el cual se encuentra encerrado en el Castillo de Hyrule. Para cumplir esta tarea no sólo tendrá que hacerse fuerte, sino que tendrá que trabajar codo con codo con todos los habitantes de Hyrule, usando para ello la fantástica Piedra Sheikav, herramienta con la que despertamos para que nos ayude en esta tarea. <br><br>
 
-La leyenda nunca había sido tan legendaria, y la libertad de este nuevo mundo nos pondrá frente a muchos de los enemigos más duros de la saga, tales como los enigmáticos Guardianes, armas mecánicas con voluntad propia que nos asolarán en nuestro recorrido y del que muchas veces tendremos que huir si queremos seguir con vida. </p>
+La leyenda nunca había sido tan legendaria, y la libertad de este nuevo mundo nos pondrá frente a muchos de los enemigos más duros de la saga, tales como los enigmáticos Guardianes, armas mecánicas con voluntad propia que nos asolarán en nuestro recorrido y del que muchas veces tendremos que huir si queremos seguir con vida.<br><br> </p>
   </div>
   
    
