--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
   <div align="center">
     <div class="boton">
-      <a href="" class="letraMenu">1980-1990</a>
+      <a href="80-90.html" class="letraMenu">1980-1990</a>
     </div>
     <div class="boton">
       <a href="" class="letraMenu">1990-2000</a>
