Conflicto creado con boton index -Flavio

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
       <a href="9010.html" class="letraMenu">1990-2000</a>
     </div>
     <div class="boton">
-      <a href="0010.html" class="letraMenu">2000-2010</a>
+      <a href="0010lkhjlkhj.html" class="letraMenu">2000-2010</a>
     </div>
+    <div class="boton">
+      <a href="0010lkhjlkhj.html" class="letraMenu">2000-2010</a>
+    </div>   
     <div class="boton">
       <a href="10-20.html" class="letraMenu">2010-2020</a>
       </div>
