modificando enlaces en 80-90.html fran

--- a/80-90.html
+++ b/80-90.html
@@ -22,13 +22,13 @@
       <a href="" class="letraMenu">1980-1990</a>
     </div>
     <div class="boton">
-      <a href="" class="letraMenu">1990-2000</a>
+      <a href="90-00" class="letraMenu">1990-2000</a>
     </div>
     <div class="boton">
-      <a href="" class="letraMenu">2000-2010</a>
+      <a href="00-10" class="letraMenu">2000-2010</a>
     </div>
     <div class="boton">
-      <a href="index.html" class="letraMenu">2010-2020</a>
+      <a href="10-20.html" class="letraMenu">2010-2020</a>
       </div>
       <div class="boton">
       <a href="index.html" class="letraMenu">Inicio</a>
