Solucionado problema de los links- Pedro

--- a/plantilla.html
+++ b/plantilla.html
@@ -25,10 +25,10 @@
       <a href="" class="letraMenu">1990-2000</a>
     </div>
     <div class="boton">
-      <a href="" class="letraMenu">2000-2010</a>
+      <a href="00-10.html" class="letraMenu">2000-2010</a>
     </div>
     <div class="boton">
-      <a href="index.html" class="letraMenu">2010-2020</a>
+      <a href="" class="letraMenu">2010-2020</a>
       </div>
       <div class="boton">
       <a href="index.html" class="letraMenu">Inicio</a>
