Terminado indice derecha, noticias y pie de pagina, Javier

--- a/10-20.html
+++ b/10-20.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1" />
-<title>Plantilla</title>
+<title>2010-2020</title>
 <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 </head>
 <body>
@@ -33,13 +33,13 @@
       </li>
       <br>
       <li>
-        <h2><a href=""> Década 2000-2010</a></h2>
+        <h2><a href="00-10.html"> Década 2000-2010</a></h2>
         <ol>
-          <li><a href=""> Top 5: The Legend Of Zelda: Breath Of The Wild</a></li>
-          <li><a href=""> Top 4: Sekiro: Shadows Die Twice</a></li>
-          <li><a href=""> Top 3: Grand Theft Autos V</a></li>
-          <li><a href=""> Top 2: The Witcher III: Wild Hunt</a></li>
-          <li><a href=""> Top 1: Red Dead Redemption II</a></li>
+          <li><a href="zelda2.html"> Top 5: The Legend Of Zelda: Breath Of The Wild</a></li>
+          <li><a href="sekiro.html"> Top 4: Sekiro: Shadows Die Twice</a></li>
+          <li><a href="gtav.html"> Top 3: Grand Theft Autos V</a></li>
+          <li><a href="witcher.html"> Top 2: The Witcher III: Wild Hunt</a></li>
+          <li><a href="rdr2.html"> Top 1: Red Dead Redemption II</a></li>
         </ol>
       </li>
       <br>
