--- a/80-90.html
+++ b/80-90.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1" />
-<title>80-90</title>
+<title>1980-1990</title>
 <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 </head>
 <body>
@@ -67,13 +67,13 @@
   </div>
   <div align="center">
     <div class="boton">
-      <a href="" class="letraMenu">1980-1990</a>
+      <a href="80-90.html" class="letraMenu">1980-1990</a>
     </div>
     <div class="boton">
-      <a href="90-00" class="letraMenu">1990-2000</a>
+      <a href="90-00.html" class="letraMenu">1990-2000</a>
     </div>
     <div class="boton">
-      <a href="00-10" class="letraMenu">2000-2010</a>
+      <a href="00-10.html" class="letraMenu">2000-2010</a>
     </div>
     <div class="boton">
       <a href="10-20.html" class="letraMenu">2010-2020</a>
