--- a/90-00.html
+++ b/90-00.html
@@ -33,13 +33,13 @@
       </li>
       <br>
       <li>
-        <h2><a href=""> Década 2000-2010</a></h2>
+        <h2><a href="00-10.html"> Década 2000-2010</a></h2>
         <ol>
-          <li><a href=""> Top 5: The Legend Of Zelda: Breath Of The Wild</a></li>
-          <li><a href=""> Top 4: Sekiro: Shadows Die Twice</a></li>
-          <li><a href=""> Top 3: Grand Theft Autos V</a></li>
-          <li><a href=""> Top 2: The Witcher III: Wild Hunt</a></li>
-          <li><a href=""> Top 1: Red Dead Redemption II</a></li>
+          <li><a href="zelda2.html"> Top 5: The Legend Of Zelda: Breath Of The Wild</a></li>
+          <li><a href="sekiro.html"> Top 4: Sekiro: Shadows Die Twice</a></li>
+          <li><a href="gtav.html"> Top 3: Grand Theft Autos V</a></li>
+          <li><a href="witcher.html"> Top 2: The Witcher III: Wild Hunt</a></li>
+          <li><a href="rdr2.html"> Top 1: Red Dead Redemption II</a></li>
         </ol>
       </li>
       <br>
@@ -67,16 +67,16 @@
   </div>
   <div align="center">
     <div class="boton">
-      <a href="" class="letraMenu">1980-1990</a>
+      <a href="80-90.html" class="letraMenu">1980-1990</a>
     </div>
     <div class="boton">
-      <a href="" class="letraMenu">1990-2000</a>
+      <a href="90-00.html" class="letraMenu">1990-2000</a>
     </div>
     <div class="boton">
-      <a href="" class="letraMenu">2000-2010</a>
+      <a href="00-10.html" class="letraMenu">2000-2010</a>
     </div>
     <div class="boton">
-      <a href="index.html" class="letraMenu">2010-2020</a>
+      <a href="10-20.html" class="letraMenu">2010-2020</a>
       </div>
       <div class="boton">
       <a href="index.html" class="letraMenu">Inicio</a>
