--- a/10-20.html
+++ b/10-20.html
@@ -35,11 +35,11 @@
       <li>
         <h2><a href="00-10.html"> Década 2000-2010</a></h2>
         <ol>
-          <li><a href="zelda2.html"> Top 5: The Legend Of Zelda: Breath Of The Wild</a></li>
-          <li><a href="sekiro.html"> Top 4: Sekiro: Shadows Die Twice</a></li>
-          <li><a href="gtav.html"> Top 3: Grand Theft Autos V</a></li>
-          <li><a href="witcher.html"> Top 2: The Witcher III: Wild Hunt</a></li>
-          <li><a href="rdr2.html"> Top 1: Red Dead Redemption II</a></li>
+          <li><a href="lol2.html"> Top 5: League of Legends</a></li>
+          <li><a href="dragonball.html"> Top 4: Dragon Ball Z Budokai Tenkaichi 3</a></li>
+          <li><a href="plantasvszombies.html"> Top 3: Plantas Contra Zombies</a></li>
+          <li><a href="wow.html"> Top 2: World of Warcraft</a></li>
+          <li><a href="pokemon.html"> Top 1: Pokemon Diamante</a></li>
         </ol>
       </li>
       <br>
