Sección de noticias modificada - Jairo

--- a/spyro2.html
+++ b/spyro2.html
@@ -88,7 +88,7 @@
   </div>
   
  
-  <div id="content_body">
+   <div id="content_body">
     <div id="reviews_box">
       <div id="reviews">
         <div class="content_header">
@@ -97,16 +97,16 @@
         <div class="content_entry">
           <div class="thumbnail"><img src="images/_image01.gif" width="121" height="90" alt="Image Caption" /></div>
           <div class="entry_text">
-            <p>We add new <a href="#">free website templates</a> frequently.</p>
-            <p>You can remove any link to our websites from this template you're free to use the template without linking back to us.</p>
+            <p>El mítico <a href="#">Resident Evil</a> actualmente</p>
+            <p>Ese juego que es su día atrajo a millones de jugadores al ámbito del terror, hoy en día se encuentra prácticamente inutilizado. Una pena, pero es lo que tiene los nuevos lanzamientos .</p>
           </div>
           <div class="clearthis">&nbsp;</div>
         </div>
         <div class="content_entry">
           <div class="thumbnail"><img src="images/_image02.gif" width="118" height="88" alt="Image Caption" /></div>
           <div class="entry_text">
-            <p>This is just a place holder so you can see how the site would look like.</p>
-            <p>The template is designed by <a href="http://www.freewebsitetemplates.com">free website templates</a> for you for free you can replace all the text by your own text.</p>
+            <p>Destiny II está justo como lo dejaron en 2009, no han vuelto a meter ninguna nueva actualización.</p>
+            <p>Si quieres probar <a href="http://www.freewebsitetemplates.com">Destiny II </a> puedes comprarlo a un precio ridículo.</p>
           </div>
           <div class="clearthis">&nbsp;</div>
         </div>
@@ -120,26 +120,27 @@
         <div class="content_entry">
           <div class="thumbnail"><img src="images/_image03.gif" width="118" height="88" alt="Image Caption" /></div>
           <div class="entry_text">
-            <h3> <a href="http://www.justwebtemplates.com">Just Web Templates</a> <br />
+            <h3> <a href="http://www.justwebtemplates.com">Juegos marinos</a> <br />
             </h3>
-            <p>Even more websites all about website templates on <a href="http://www.justwebtemplates.com">Just Web Templates</a>.</p>
+            <p>Si te gustan este tipo de juegos podrás probar el popular <a href="http://www.justwebtemplates.com">Consboart</a>.</p>
           </div>
           <div class="clearthis">&nbsp;</div>
         </div>
         <div class="content_entry">
           <div class="thumbnail"><img src="images/_image04.gif" width="118" height="88" alt="Image Caption" /></div>
           <div class="entry_text">
-            <h3> <a href="http://www.templatebeauty.com">Template Beauty</a> <br />
+            <h3> <a href="http://www.templatebeauty.com">Halo 2</a> <br />
             </h3>
-            <p>If you're looking for beautiful and professionally made templates you can find them at <a href="http://www.templatebeauty.com">Template Beauty</a>.</p>
+            <p>El mítico juego que solo está dispobible en plataformas microsoft y que millones de usuarios han probado, actualmente puedes probrarlo solo en <a href="http://www.templatebeauty.com">Xbox 360</a>.</p>
           </div>
           <div class="clearthis">&nbsp;</div>
         </div>
       </div>
     </div>
   </div>
+</div>
   <div id="clearthis_contentbody">&nbsp;</div>
 </div>
-<div id="page_footer"> Copyright <a href="#">www.yoursite.com</a> | designed by <a href="http://www.freewebsitetemplates.com">free website templates</a> </div>
+<div id="page_footer"> Copyright <a href="#">www.GameZone.com</a> | designed by Javier, Flavio, Jairo, Pedro y Fran </div>
 </body>
 </html>
