Arreglo boton atras 00-10.html, Javier

--- a/wow.html
+++ b/wow.html
@@ -19,7 +19,7 @@
   </div>
   <div align="left">
     <div class="boton">
-      <a href="" class="boton-plantilla2">Atrás</a>
+      <a href="index.html" class="boton-plantilla2">Atrás</a>
     </div>
     
   </div>
