--- a/pokemon.html
+++ b/pokemon.html
@@ -19,7 +19,7 @@
   </div>
   <div align="left">
     <div class="boton">
-      <a href="" class="boton-plantilla2">Atrás</a>
+      <a href="00-10.html" class="boton-plantilla2">Atrás</a>
     </div>
     
   </div>
