Mejorado descripcion dragonball en 00-10-Pedro

--- a/00-10.html
+++ b/00-10.html
@@ -45,7 +45,7 @@
     
     <a href="dragonball.html"><h2 class="titulo-juego">Top 4: Dragon Ball Z budokai tenkaichi 3</h2></a>
     <a href="enlace descripcion detallada"><img src="images/dragonball.jpg" width="260" height="350" class="imagenJuego"></a>
-     <p class="descripcionJuego"> Dragon Ball Z budokai tenkaichi 3 es una serie de juegos de lucha basados en anime y manga Dragon Ball </p>
+     <p class="descripcionJuego"> Dragon Ball Z budokai tenkaichi 3 es una serie de juegos de lucha basados en anime y manga Dragon Ball Z con un desenlace increible por parte de su guionista. </p>
   </div>
    <div class="cuerpo">
     
