--- a/sekiro.html
+++ b/sekiro.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1" />
-<title>Game Zone</title>
+<title>Sekiro</title>
 <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 </head>
 <body>
